fix cropped input fields focus state

--- a/djangocms_admin_style/sass/components/_forms.scss
+++ b/djangocms_admin_style/sass/components/_forms.scss
@@ -199,7 +199,7 @@ form {
         }
     }
     .form-row {
-        padding: 8px 0 30px;
+        padding: 8px 2px 30px;
         border-bottom-color: $gray-lighter;
         &.errors {
             border: 0;
